--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple static page generator",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node main.js"
   },
   "keywords": [
     "static_page",
@@ -13,6 +13,7 @@
   "author": "kang",
   "license": "MIT",
   "dependencies": {
+    "copy-dir": "^1.3.0",
     "markdown-it": "^12.3.2"
   }
 }
